--- a/examples/user_guide/R_integration_guide/R_GEM_normalizations.ipynb
+++ b/examples/user_guide/R_integration_guide/R_GEM_normalizations.ipynb
@@ -14,7 +14,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -28,15 +28,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
