--- a/examples/user_guide/R_integration_guide/DESeq2_GeneSets.ipynb
+++ b/examples/user_guide/R_integration_guide/DESeq2_GeneSets.ipynb
@@ -624,6 +624,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>&lt;xarray.Dataset&gt;\n",
+       "Dimensions:         (Gene: 10593)\n",
+       "Coordinates:\n",
+       "  * Gene            (Gene) object &#x27;ChrSy.fgenesh.gene.37&#x27; ... &#x27;LOC_Os12g44390&#x27;\n",
+       "Data variables:\n",
+       "    baseMean        (Gene) float64 568.4 114.8 89.42 979.5 ... 175.3 584.9 519.7\n",
+       "    log2FoldChange  (Gene) float64 -0.2267 0.1297 -0.2656 ... 0.02349 -0.0145\n",
+       "    lfcSE           (Gene) float64 0.09135 0.04875 0.05142 ... 0.1001 0.02549\n",
+       "    stat            (Gene) float64 -2.482 2.66 -5.165 ... -6.607 0.2346 -0.5688\n",
+       "    pvalue          (Gene) float64 0.01306 0.007816 2.411e-07 ... 0.8145 0.5695\n",
+       "    padj            (Gene) float64 0.02269 0.01426 9.272e-07 ... 0.8516 0.6381\n",
+       "    support         (Gene) bool True True True False ... False True False False\n",
+       "Attributes:\n",
+       "    DESeq2_formula:            ~ Treatment\n",
+       "    __GSForge.GeneSet.params:  {&quot;gene_index_name&quot;: &quot;Gene&quot;, &quot;name&quot;: &quot;deseq2_tr...</pre>"
+      ],
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:         (Gene: 10593)\n",
+       "Coordinates:\n",
+       "  * Gene            (Gene) object 'ChrSy.fgenesh.gene.37' ... 'LOC_Os12g44390'\n",
+       "Data variables:\n",
+       "    baseMean        (Gene) float64 568.4 114.8 89.42 979.5 ... 175.3 584.9 519.7\n",
+       "    log2FoldChange  (Gene) float64 -0.2267 0.1297 -0.2656 ... 0.02349 -0.0145\n",
+       "    lfcSE           (Gene) float64 0.09135 0.04875 0.05142 ... 0.1001 0.02549\n",
+       "    stat            (Gene) float64 -2.482 2.66 -5.165 ... -6.607 0.2346 -0.5688\n",
+       "    pvalue          (Gene) float64 0.01306 0.007816 2.411e-07 ... 0.8145 0.5695\n",
+       "    padj            (Gene) float64 0.02269 0.01426 9.272e-07 ... 0.8516 0.6381\n",
+       "    support         (Gene) bool True True True False ... False True False False\n",
+       "Attributes:\n",
+       "    DESeq2_formula:            ~ Treatment\n",
+       "    __GSForge.GeneSet.params:  {\"gene_index_name\": \"Gene\", \"name\": \"deseq2_tr..."
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deseq2_treatment.data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
