minor model updates, travis_dev

--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1781,7 +1781,7 @@
     "treatment_feature_importance = gsf.operations.rank_genes_by_model(\n",
     "    gsc,\n",
     "    selected_gene_sets=[\"Boruta_Treatment\"],\n",
-    "    annotation_variables=\"Treatment\",\n",
+    "    annotation_variables=[\"Treatment\"],\n",
     "    model=gene_rank_mdl,\n",
     "    n_iterations=3\n",
     ")"
@@ -1962,7 +1962,7 @@
     "treatment_mProbes = gsf.operations.analytics.mProbes(\n",
     "    gsc,\n",
     "    selected_gene_sets=[\"Boruta_Treatment\"],\n",
-    "    annotation_variables=\"Treatment\",\n",
+    "    annotation_variables=[\"Treatment\"],\n",
     "    model=gene_rank_mdl,\n",
     "    n_iterations=3\n",
     ")"
@@ -2860,10 +2860,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
