--- a/examples/user_guide/GeneSet_Comparison.ipynb
+++ b/examples/user_guide/GeneSet_Comparison.ipynb
@@ -1770,7 +1770,7 @@
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = gsf.operations.analytics.train_test_split_wrapper(combined_gsc, \n",
-    "      annotation_variables=\"Treatment\")\n",
+    "      annotation_variables=[\"Treatment\"])\n",
     "\n",
     "rf_cls_model = RandomForestClassifier(\n",
     "    class_weight='balanced',\n",
@@ -1906,6 +1906,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
