--- a/examples/user_guide/GeneSet_Comparison.ipynb
+++ b/examples/user_guide/GeneSet_Comparison.ipynb
@@ -1742,7 +1742,7 @@
     "\n",
     "for collection in [\"Boruta_Treatment\", \"deseq2_treatment\"]:\n",
     "    \n",
-    "    x_train, x_test, y_train, y_test = gsf.operations.analytics.train_test_split_wrapper(combined_gsc, \n",
+    "    x_train, x_test, y_train, y_test = gsf.utils.wrappers.analytics.train_test_split_wrapper(combined_gsc, \n",
     "          selected_gene_sets=[collection], \n",
     "          annotation_variables=\"Treatment\")\n",
     "    \n",
@@ -1769,7 +1769,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = gsf.operations.analytics.train_test_split_wrapper(combined_gsc, \n",
+    "x_train, x_test, y_train, y_test = gsf.utils.wrappers.analytics.train_test_split_wrapper(combined_gsc, \n",
     "      annotation_variables=[\"Treatment\"])\n",
     "\n",
     "rf_cls_model = RandomForestClassifier(\n",
@@ -1891,7 +1891,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1905,15 +1905,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
