updated how docker images are built, fixed setup.py requirements.

--- a/examples/user_guide/user_guide.ipynb
+++ b/examples/user_guide/user_guide.ipynb
@@ -11,16 +11,17 @@
     "\n",
     "### Getting Started\n",
     "\n",
-    "*Links within images do not seem to work within notebook markdown. Click the links below instead.*\n",
     "\n",
-    "<img src=\"../assets/user_guide.svg\" width=\"900\" />\n",
-    "\n"
+    "<img src=\"../assets/user_guide.svg\" width=\"600\" />\n",
+    "\n",
+    "*Links within images do not seem to work within notebook markdown. Click the links below instead.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Getting Started\n",
     "\n",
     "+ [**AnnotatedGEM from pandas**](AnnotatedGEM_from_pandas.ipynb)  \n",
     "  How to load your count and label .csv or .txt files into an `xarray.Dataset` using `GSForge`, and save them as a single netcdf (.nc) file for future use.\n",
@@ -29,19 +30,28 @@
     "  How to run and save different normalizations to the same `AnnotatedGEM` object.\n",
     "\n",
     "\n",
+    "#### Selecting Genes\n",
+    "\n",
     "* [**Selecting Genes with Boruta**](Selecting_Genes_with_Boruta.ipynb)  \n",
     "  How to select genes based on a sample label using random forests via the Boruta algorithm.\n",
     "\n",
     "\n",
+    "#### Analyzing Selected Genes\n",
+    "\n",
     "* [**GeneSet Analysis**](GeneSet_Analysis.ipynb)  \n",
     "  How to run a basic gene (feature) selection using random forests and the Boruta all-relevant feature selection algorithm.\n",
+    "  \n",
+    "* [**Workflow Guide**](workflow_guide/index.rst)  \n",
+    "  Using nextflow to run many different boruta analyses.\n",
     "\n",
+    "\n",
+    "#### Vizualizing GEM and GeneSet Results\n",
     "\n",
     "* [**Plotting Guide**](plotting_guide/index.rst)  \n",
     "  Plotting examples by plot type.\n",
     "\n",
-    "* [**Workflow Guide**](workflow_guide/index.rst)  \n",
-    "  Using nextflow to run many different boruta analyses.\n",
+    "\n",
+    "#### Integration Guides\n",
     "\n",
     "* [**R-Integration Guide**](R_integration_guide/index.rst)  \n",
     "  Integrating results from R packages into GeneSet objects."
@@ -57,7 +67,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -71,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
