updated travis. travis_dev

--- a/examples/user_guide/plotting_guide/Plotting_Guide.ipynb
+++ b/examples/user_guide/plotting_guide/Plotting_Guide.ipynb
@@ -2609,6 +2609,8 @@
    "source": [
     "**How to return a plot with no styling applied**\n",
     "\n",
+    "If you want to apply your own styling, plots can be returned with their default settings only. It is then up to you to modify the `holoviews` object, and to apply desired options from your selected backend.\n",
+    "\n",
     "All `GSForge` plotting functions have an `apply_default_opts`, which attempts to apply options based on the currently loaded backend extension.\n",
     "\n",
     "Not all functions will have a `datashade` argument."
